# pastepoint

./: .dockerignore  .editorconfig  .env.development  .gitignore  .prettierignore  .prettierrc  .rustfmt.toml  CNAME  CONTRIBUTING.md  Cargo.toml  DISCLAIMER.md  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  package-lock.json  package.json  qodana.sarif.json  qodana.yaml  rust-toolchain
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: .codecov.yml  ios.yml  linter.yml  npm.yml  qodana_code_quality.yml  release.yml  rust.yml  server.yml  web.yml
.qodana/: qodana.recommended.all.yaml
client/: .dockerignore  Dockerfile  README.md  angular.json  eslint.config.js  karma.conf.cjs  package-lock.json  package.json  server.ts  stylelint.config.js  tailwind.config.js  tsconfig.app.json  tsconfig.json  tsconfig.spec.json
client/ios/: .gitignore  .swiftformat  .swiftlint.yml
client/ios/PastePoint.xcodeproj/: project.pbxproj
client/ios/PastePoint.xcodeproj/xcshareddata/: IDETemplateMacros.plist
client/ios/PastePoint/App/: ContentView.swift  PastePointApp.swift
client/ios/PastePointTests/: PastePointTests.swift
client/ios/PastePointUITests/: PastePointUITests.swift  PastePointUITestsLaunchTests.swift
client/public/: robots.txt  site.webmanifest  sitemap.xml
client/src/: .htmlhintrc  index.html  main.server.ts  main.ts  server.ts  styles.css
client/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.config.ts  app.module.ts  app.routes.ts  chat.service.ts
client/src/environments/: environment.prod.ts  environment.ts
client/web/: Dockerfile  README.md  angular.json  package-lock.json  package.json  stylelint.config.js  tailwind.config.js  tsconfig.json
client/web/public/: robots.txt  site.webmanifest  sitemap.xml
client/web/src/: index.html  main.server.ts  server.ts  styles.css
nginx/: locations.conf  nginx.conf  security-headers.conf  security_headers.conf  security_settings.conf
nginx/includes/: common_cache_busting.conf  common_proxy_ssr.conf  common_proxy_ws.conf  common_rate_limiting.conf  common_ssl.conf
nginx/security/: security_headers.conf  security_settings.conf
scripts/: configure-network.sh  create-releases.sh  generate-certs.sh  prepare_prod.sh
scripts/deployment/: prepare_prod.sh
scripts/development/: generate-certs.sh
server/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
server/config/: development.toml  docker-dev.toml  production.toml
server/src/: actor.rs  attachment.rs  config.rs  consts.rs  error.rs  handler.rs  lib.rs  main.rs  message.rs  routes.rs  server.rs  session.rs  session_manager.rs  session_store.rs
server/tests/: advanced_ws_tests.rs  basic_tests.rs  command_handling_tests.rs  common.rs  origin_check_tests.rs  test.rs  ws_communication_tests.rs
(+281 files in other folders)
