[package]
name = "server"
version = "0.7.0"
edition = "2021"
authors = ["Sulaiman AlRomaih"]
license = "GPL-3"

[[bin]]
name = "server_bin"
path = "src/main.rs"

[dependencies]
actix = "0.13.5"
actix-broker = "0.4.3"
actix-web = { version = "4.10.2", features = ["openssl"] }
actix-web-actors = "4.3.1"
actix-http = "3.10.0"
actix-governor = "0.8.0"
actix-cors = "0.7.1"
actix-rt = "2.10.0"

uuid = { version = "1.16.0", features = ["v4"] }
names = { version = "0.14.0", default-features = false }
derive_more = { version = "2.0.1", features = ["full"] }
openssl = { version = "0.10.72" }
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
env_logger = "0.11.7"
log = "0.4.26"
rand = "0.8.5"
bytes = "1.10.1"
config = "0.15.11"

[dev-dependencies]
actix-test = "0.1.5"
futures-util = { version = "0.3.31", default-features = false, features = ["std"] }
awc = "3.6.0"
tokio = "1.44.2"
