[package]
name = "server"
version = "0.7.6"
edition = "2021"
authors = ["Sulaiman AlRomaih"]
license = "GPL-3"

[[bin]]
name = "server_bin"
path = "src/main.rs"

[dependencies]
actix = "0.13.5"
actix-broker = "0.4.3"
actix-web = { version = "4.11.0", features = ["openssl"] }
actix-web-actors = "4.3.1"
actix-http = "3.11.0"
actix-governor = "0.8.0"
actix-cors = "0.7.1"
actix-rt = "2.10.0"

uuid = { version = "1.17.0", features = ["v4"] }
fake = "4.3.0"
derive_more = { version = "2.0.1", features = ["full"] }
openssl = { version = "0.10.73" }
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.27"
rand = "0.9.1"
bytes = "1.10.1"
config = "0.15.11"
url = "2.5.4"

[dev-dependencies]
actix-test = "0.1.5"
futures-util = { version = "0.3.31", default-features = false, features = ["std"] }
awc = "3.7.0"
tokio = "1.45.1"
