[package]
name = "server"
version = "0.9.1"
edition = "2024"
authors = ["Sulaiman AlRomaih"]
license = "GPL-3"

[[bin]]
name = "server_bin"
path = "src/main.rs"

[dependencies]
actix = "0.13.5"
actix-broker = "0.4.4"
actix-web = { version = "4.13.0", features = ["openssl"] }
actix-web-actors = "4.3.1"
actix-http = "3.12.0"
actix-governor = "0.10.0"
actix-cors = "0.7.1"
actix-rt = "2.11.0"

uuid = { version = "1.23.0", features = ["v4"] }
fake = "5.1.0"
derive_more = { version = "2.1.1", features = ["full"] }
openssl = { version = "0.10.78" }
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
env_logger = "0.11.10"
log = "0.4.29"
rand = "0.10.0"
bytes = "1.11.1"
config = "0.15.22"
url = "2.5.8"

[dev-dependencies]
actix-test = "0.1.5"
futures-util = { version = "0.3.32", default-features = false, features = ["std"] }
awc = "3.8.2"
tokio = "1.51.0"
